@@ -1,6 +1,10 @@
 Changes sicne release 4.0 Beta 1
 -------------------
 
+* [HTTPASYNC-19] Fixed incorrect execution of message exchanges that span across multiple hosts 
+  (for instance, in case of a request redirect).  
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPASYNC-18] Fixed thread deadlock that could occur in the DefaultAsyncRequestDirector 
   in case of a runtime exception.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
